# storage/api-docs/api-docs.json
@@ -12,14 +12,14 @@
         }
     ],
     "paths": {
-        "/api/admin/register": {
+        "/admin/register": {
             "post": {
                 "tags": [
                     "Admin Auth"
                 ],
                 "summary": "Creer un compte administrateur",
                 "description": "Permet de creer un nouveau compte administrateur.",
-                "operationId": "876bcd0cd7c5f5cb4e34601a78d4d431",
+                "operationId": "4c9ff7f9fab7f89d744513cfe5480a0f",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -1522,18 +1522,8 @@
                 "tags": [
                     "CatÃ©gories"
                 ],
-                "summary": "Liste des catÃ©gories racines",
+                "summary": "Liste des catÃ©gories",
                 "operationId": "b77b1daca69d91daf0fb0560ae4d961f",
-                "parameters": [
-                    {
-                        "name": "type",
-                        "in": "query",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "SuccÃ¨s"
@@ -1552,8 +1542,7 @@
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "nom",
-                                    "type"
+                                    "nom"
                                 ]
                             }
                         }
@@ -1646,25 +1635,6 @@
                 "responses": {
                     "200": {
                         "description": "SupprimÃ©"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            }
-        },
-        "/api/categories/reorder": {
-            "patch": {
-                "tags": [
-                    "CatÃ©gories"
-                ],
-                "summary": "RÃ©organiser les catÃ©gories (Admin)",
-                "operationId": "faac2cdef4134f01d01badec67a067d8",
-                "responses": {
-                    "200": {
-                        "description": "RÃ©organisÃ©"
                     }
                 },
                 "security": [
